Update 'java-quarkus-bdhokbce' component image to: quay.io/rhtap_qe/java-quarkus-bdhokbce:785ee8a366a76a07543e76793b58be622bdb172b@sha256:740be49fca8e3b6a49104be47115575d2b80370e502c2fb3d5063a8f7c5084fb

--- a/components/java-quarkus-bdhokbce/overlays/development/deployment-patch.yaml
+++ b/components/java-quarkus-bdhokbce/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: java-quarkus-bdhokbce
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/java-quarkus-bdhokbce:785ee8a366a76a07543e76793b58be622bdb172b@sha256:740be49fca8e3b6a49104be47115575d2b80370e502c2fb3d5063a8f7c5084fb
+          name: container-image
